[~] small swagger update for output of calculations
