# internal/calculations/model/dto.go
@@ -8,3 +8,8 @@ type BaseCalculateResponse struct {
 	InputData  []*BasicCalculationFieldLogic    `json:"input_data"`
 	OutputData []*BasicCategoryCalculationLogic `json:"output_data"`
 }
+
+type ImprovedCalculateResponse struct {
+	BaseCalculateResponse
+	Link string `json:"link"`
+}
